# LMA-IK

./: .gitignore  CITATION.cff  LICENSE  README.md  install.sh  pyproject.toml  reproduce.py  submission.txt
checkpoints/: README.md
data/: README.md
notebooks/: train_interpolator.ipynb  train_synthesizer.ipynb  userstudy_analysis.ipynb
source/: __init__.py  dataset.py  forward_kinematics.py  interpolator.py  laban.py  rotations.py  synthesizer.py
